Added city selection dropdown in Guarantor Module and minor changes as per requirements.

--- a/MobileFinanceErp/Views/Brand/_CreateEditPartial.cshtml
+++ b/MobileFinanceErp/Views/Brand/_CreateEditPartial.cshtml
@@ -18,7 +18,7 @@
             OnFailure = "brandSaveError",
             OnComplete = "hideLoader",
             OnBegin = "showLoader"
-        }, new { @class = "form-horizontal" }))
+        }, new { @class = "form-horizontal can-popup" }))
         {
             @Html.AntiForgeryToken()
             @Html.HiddenFor(w => w.Id)
