--- a/MobileFinanceErp/Views/Guarantor/Create.cshtml
+++ b/MobileFinanceErp/Views/Guarantor/Create.cshtml
@@ -6,7 +6,8 @@
     ViewBag.ActionName = "Create";
 }
 <script src="~/Scripts/pages/guarantor.addedit.js"></script>
-
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+@Scripts.Render("~/bundles/jqueryval")
 @{
     Html.RenderPartial("_CreateEditPartial", Model);
 }
