--- a/MobileFinanceErp/Views/Shared/_Layout.cshtml
+++ b/MobileFinanceErp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Mobile ERP</title>
+    <title>Finance Mobile</title>
     <!-- Icons-->
     <link rel="icon" type="image/ico" href="~/favicon.ico" sizes="any" />
     <link href="~/Content/coreui/icons/css/coreui-icons.min.css" rel="stylesheet" />
@@ -55,9 +55,9 @@
         </button>
         <a class="navbar-brand" href="#">
 
-            Mobile ERP
+            Finance Mobile
             @*<img class="navbar-brand-full" src="img/brand/logo.svg" width="89" height="25" alt="CoreUI Logo">
-                <img class="navbar-brand-minimized" src="img/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo">*@
+        <img class="navbar-brand-minimized" src="img/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo">*@
         </a>
         <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
             <span class="navbar-toggler-icon"></span>
@@ -129,6 +129,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("Index","Guarantor")">
+                                <i class="nav-icon icon-user"></i> Guarantor
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("Index","Customer")">
                                 <i class="nav-icon icon-user"></i> Customer
                             </a>
@@ -136,11 +141,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("Index","Finance")">
                                 <i class="nav-icon icon-chart"></i> Finance
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Index","Guarantor")">
-                                <i class="nav-icon icon-user"></i> Guarantor
                             </a>
                         </li>
                     }
@@ -159,11 +159,11 @@
     </div>
     <footer class="app-footer">
         <div>
-            <a href="#">Mobile ERP</a>
+            <a href="#">Finance Mobile</a>
             <span>&copy;<script>document.write(new Date().getFullYear())</script></span>
         </div>
         <div class="ml-auto">
-            <span>Powered by</span>
+            <span><p class="love">Made with <i class="fa fa-heart"></i></p></span>
             <a href="#"></a>
         </div>
     </footer>
