--- a/MobileFinanceErp/Views/Guarantor/_CreateEditPartial.cshtml
+++ b/MobileFinanceErp/Views/Guarantor/_CreateEditPartial.cshtml
@@ -8,7 +8,7 @@
     }
 }
 
-
+@Scripts.Render("~/bundles/jqueryval")
 
 <div class="row">
     <div class="col-lg-12">
@@ -68,11 +68,6 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-md-4 col-lg-6">
-                            @*<div class="form-group">
-                                @Html.RequiredLabelFor(w => w.City)
-                                @Html.TextBoxFor(w => w.City, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(w => w.City)
-                            </div>*@
                             <div>
                                 @Html.RequiredLabelFor(w => w.CityId)
                                 @(Html.KendoDropdownFor(w => w.CityId, new { @class = "form-control", @style = "width:100%" })
@@ -80,6 +75,7 @@
                                                                                 .DataValueField("Id")
                                                                                 .Read(Url.Action("GetAll", "GroupCode", new { codeName = "City" }))
                                                                                 .OptionLabel("Select City..")
+                                                                                .AddUrl("addUpdateCity")
                                                                                 .Render())
                                 @Html.ValidationMessageFor(w => w.CityId)
                             </div>
@@ -123,7 +119,7 @@
                 </div>
 
                 <div class="card-footer">
-                    <button class="btn btn-sm btn-primary" type="submit"> Submit</button>
+                    <button class="btn btn-sm btn-primary" type="submit" name="Save"> Submit</button>
                     <button class="btn btn-sm btn-danger" type="reset"> Reset</button>
                 </div>
             </div>
@@ -133,4 +129,5 @@
 
 <script>
     var guarantorListPageUrl = '@Url.Action("Index", "Guarantor")'
+    var addCityUrl = '@Url.Action("CreateGroupCode", "GroupCode", new { @code = "City" })';
 </script>
