--- a/MobileFinanceErp/Views/Model/Edit.cshtml
+++ b/MobileFinanceErp/Views/Model/Edit.cshtml
@@ -6,7 +6,8 @@
     ViewBag.ActionName = "Edit";
 }
 <script src="~/Scripts/pages/models.addedit.js"></script>
-
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+@Scripts.Render("~/bundles/jqueryval")
 @{
     Html.RenderPartial("_CreateEditPartial", Model);
 }
