--- a/MobileFinanceErp/Views/Finance/Index.cshtml
+++ b/MobileFinanceErp/Views/Finance/Index.cshtml
@@ -116,6 +116,7 @@
                                                     .Columns(column =>
                                                     {
                                                         column.Bound(s => s.CustomerName);
+                                                        column.Bound(s => s.CustomerAddress);
                                                         column.Bound(s => s.BookNoPageNumber);
                                                         column.Bound(s => s.CustomerMobileNumber);
                                                         column.Bound(s => s.GuarantorName);
