--- a/MobileFinanceErp/Views/Guarantor/Index.cshtml
+++ b/MobileFinanceErp/Views/Guarantor/Index.cshtml
@@ -25,6 +25,7 @@
                                     .Columns(column =>
                                     {
                                         column.Bound(s => s.FirstName);
+                                        column.Bound(s => s.FatherName);
                                         column.Bound(s => s.LastName);
                                         column.Bound(s => s.Identification);
                                         column.Bound(s => s.Address1);
