Add DownPayment total into pending LoanAmount on Dashboard, Also show DownPayment individual column into Finance List

--- a/MobileFinanceErp/Views/Finance/Index.cshtml
+++ b/MobileFinanceErp/Views/Finance/Index.cshtml
@@ -121,6 +121,7 @@
                                                         column.Bound(s => s.CustomerMobileNumber);
                                                         column.Bound(s => s.GuarantorName);
                                                         column.Bound(s => s.LoanAmount).Searchable(false);
+                                                        column.Bound(s => s.DownPayment).Searchable(false);
                                                         column.Template().Title("Actions").RenderCallback("generateActionLink");
                                                     })
                                                     .DetailTemplate("financeDetailTemplate")
@@ -131,9 +132,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 <script id="javascriptTemplate" type="text/x-kendo-template">
     <button class="btn btn-link text-info" title="Recieve Payment" onclick="receiveFinance(#:Id#)">
