--- a/MobileFinanceErp/Views/Finance/Index.cshtml
+++ b/MobileFinanceErp/Views/Finance/Index.cshtml
@@ -118,8 +118,9 @@
                                                         column.Bound(s => s.CustomerName);
                                                         column.Bound(s => s.CustomerAddress);
                                                         column.Bound(s => s.BookNoPageNumber);
-                                                        column.Bound(s => s.CustomerMobileNumber);
+                                                        //column.Bound(s => s.CustomerMobileNumber);
                                                         column.Bound(s => s.GuarantorName);
+                                                        //column.Bound(s => s.GuarantorMobile);
                                                         column.Bound(s => s.LoanAmount).Searchable(false);
                                                         column.Bound(s => s.DownPayment).Searchable(false);
                                                         column.Template().Title("Actions").RenderCallback("generateActionLink");
